--- a/styles/element-tabs.styl
+++ b/styles/element-tabs.styl
@@ -17,3 +17,7 @@
           &.is-active
             color var(--text-color)
             background-color var(--background-color-block)
+  .el-tabs__content
+    // overflow auto
+    // max-height 600px
+
