fixed: 主要修改 ios 移动端导航栏无法显示的问题（将 fixed 定位修改为 absolute 定位呢）

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,1 +1,9 @@
 // Will add to final css after all style, it has highest priority-first.
+// 一些不得不覆盖的样式
+
+@media (max-width: 959px)
+  .search-box
+    margin-right: 15px !important
+
+.go-to-top
+  z-index 999 !important
