修复图片全屏被覆盖的样式问题

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -30,7 +30,8 @@ body
   margin-top $navbarHeight
 .page
   flex 1
-  overflow-x hidden
+  // fixed：图片全屏时被截断
+  // overflow-x hidden
   max-width $contentWidth
   margin 0 auto
   padding 0
